Problème Font sur Vercel

--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -40,7 +40,7 @@
 }
 
 @font-face{
-  font-family: 'Oswald semibold';
+  font-family: 'Oswald-semibold';
   src: url('/fonts/Oswald/Oswald-SemiBold.ttf') format('truetype');
   font-weight: 600;
 }
